Fix collapse error and remove collapse grid margin

--- a/scss/_thimble-core.scss
+++ b/scss/_thimble-core.scss
@@ -194,15 +194,11 @@ svg:not(:root) {
   -webkit-backface-visibility:hidden;
   backface-visibility:hidden;
   -webkit-flex-flow:row wrap;
-  flex-flow:row wrap
+  flex-flow:row wrap;
   &.collapse {
     > .cell {
       padding-left:0;
       padding-right:0;
-    }
-    > .grid {
-      margin-left:0;
-      margin-right:0;
     }
   }
 }
